--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+      <!-- The core Firebase JS SDK is always required and must be listed first -->
+      <!-- <script src="https://www.gstatic.com/firebasejs/6.6.2/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/6.6.2/firebase-firestore.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
     <link href="/style.css" rel="stylesheet"></link>
 </head>
@@ -22,5 +25,24 @@
         </div>
     </form>
 </body>
-    <script src=/client.js></script>
+      
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+
+<script>
+  // Your web app's Firebase configuration
+//   var firebaseConfig = {
+//     apiKey: "AIzaSyBgPuAKYdT5X5Usortu7vnEChP5YT6_fGQ",
+//     authDomain: "chat-app-b8ff0.firebaseapp.com",
+//     databaseURL: "https://chat-app-b8ff0.firebaseio.com",
+//     projectId: "chat-app-b8ff0",
+//     storageBucket: "chat-app-b8ff0.appspot.com",
+//     messagingSenderId: "248613902140",
+//     appId: "1:248613902140:web:cb46b177ff6060bf86f039",
+//     measurementId: "G-SWT1NTZ6V1"
+//   };
+//   // Initialize Firebase
+//   firebase.initializeApp(firebaseConfig);
+    </script>
+    <script src=client.js></script>
 </html>
